[gd_scene load_steps=2 format=3 uid="uid://dyhi88vq2blsi"]

[ext_resource type="Script" path="res://Rooms/room.gd" id="1_ciq70"]

[node name="Room" type="Node2D"]
script = ExtResource("1_ciq70")

[node name="UI" type="CanvasLayer" parent="."]

[node name="VBox" type="VBoxContainer" parent="UI"]
offset_right = 1152.0
offset_bottom = 648.0

[node name="Title" type="Label" parent="UI/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 45
text = "游戏大厅"
horizontal_alignment = 1

[node name="HBox" type="HBoxContainer" parent="UI/VBox"]
layout_mode = 2

[node name="ReadyButton" type="Button" parent="UI/VBox/HBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "准备！"

[node name="StatusLabel" type="Label" parent="UI/VBox/HBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "正在连接到服务器..."

[node name="PlayerListTitle" type="Label" parent="UI/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "玩家列表"

[node name="PlayerList" type="VBoxContainer" parent="UI/VBox"]
layout_mode = 2
